# fastapi-tdd-docker

./: .gitignore  README.md  docker-compose.yml  release.sh
.github/workflows/: main.yml
project/: .coverage  .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
