[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.115.12"
uvicorn = "0.34.1"
pydantic-settings = "2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
